fix shift & cg color down

--- a/shift.css
+++ b/shift.css
@@ -22,5 +22,7 @@
 }
 
 #sekarang {
-    background-image: linear-gradient(to right top, #00d1e4, #00dbd9, #00e3be, #00e895, #12eb60);
+    background: rgb(131, 58, 180);
+    background-image: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+
 }
